TAG: gxdhtload-6-0-23-6
DATE: 04/11/2024
STAFF: sc
CHANGES: wts2-1440 - added some of the report qc to DEBUG mode only

TAG: gxdhtload-6-0-23-5
DATE: 04/10/2024
STAFF: sc
CHANGES: wts2-1440 - merge wts1440 branch to trunk

TAG: gxdhtload-6-0-23-4
DATE: 03/25/2024
STAFF: sc
CHANGES: WTS2-1384 bug in assigning raw specimen values

TAG: gxdhtload-6-0-23-3
DATE: 02/26/2024
STAFF: sc
CHANGES: WTS2-1357 - implement ArrayExpress HT load with data from BioStudies

TAG: gxdhtload-6-0-23-2
DATE: 02/07/2024
STAFF: sc
CHANGES: FL2-731 - removed hard coded env python3 statment at the 
    top of makePredicted.py

TAG: gxdhtload-6-0-23-1
DATE: 02/05/2024
STAFF: sc
CHANGES: wts2-1395 - remove '\' character from description.

TAG: gxdhtload-6-0-19-3
DATE: 05/03/2022
STAFF: sc
CHANGES: wts2-860 'Modify GXD HT GEO load to bring in samples for experiments lacking them'

TAG: gxdhtload-6-0-19-2
TAG: gxdhtload-6-0-19-1
DATE: 04/25/2022
STAFF: sc
CHANGES: wts2-823 'exclude HT experiments without samples from the classifier'

TAG: gxdhtload-6-0-18-9
DATE: 03/16/2022
STAFF: sc
CHANGES: wts2-815 duplicate pubmed id properties
  being created for AE experiments

TAG: gxdhtload-6-0-18-8
DATE: 03/15/2022
STAFF: sc
CHANGES: Changed eval state key in geo_htload.py - Connie had deleted it
   then had to recreate it. Bad Connie :-)

TAG: gxdhtload-6-0-18-7
DATE: 02/16/2022
STAFF: sc
CHANGES: wts2-795 GEO gxdhtmpload failure

TAG: gxdhtload-6-0-18-6
DATE: 02/16/2022
STAFF: sc
CHANGES: wts2-795 GEO gxdhtmpload failure

TAG: gxdhtload-6-0-18-5
DATE: 01/20/2022
STAFF: sc
CHANGES: YAKS build - add more error checking for sample downloads
    and writing them to new curation log'

TAG: gxdhtload-6-0-18-4
DATE: 01/10/2022
STAFF: sc
CHANGES: YAKS merge to trunk
bin/processPredicted.sh - updated call to c predict.py

TAG: gxdhtload-6-0-18-3
TAG: gxdhtload-6-0-18-2
TAG: gxdhtload-6-0-18-1
DATE: 01/10/2022
STAFF: sc
CHANGES: YAKS merge to trunk    
retire AE, add GEO, add HT classifir to GEO
