@@ -70,17 +70,10 @@ VARIABLE_FILENAME=GXD_HTExperimentVariable.bcp
 PROPERTY_FILENAME=MGI_Property.bcp
 SAMPLE_FILENAME=GXD_HTRawSample.bcp
 KEYVALUE_FILENAME=MGI_KeyValue.bcp
+NOTE_FILENAME=MGI_Note.bcp
 
 export EXPERIMENT_FILENAME ACC_FILENAME VARIABLE_FILENAME PROPERTY_FILENAME
-export SAMPLE_FILENAME KEYVALUE_FILENAME
-# Full paths to bcp files
-EXPERIMENT_BCP=${OUTPUTDIR}/${EXPERIMENT_FILENAME}
-ACC_BCP=${OUTPUTDIR}/${ACC_FILENAME}
-VARIABLE_BCP=${OUTPUTDIR}/${VARIABLE_FILENAME}
-PROPERTY_BCP=${OUTPUTDIR}/${PROPERTY_FILENAME}
-GEO_PROPERTY_BCP=${OUTPUTDIR}/${GEO_PROPERTY_FILENAME}
-
-export EXPERIMENT_BCP ACC_BCP VARIABLE_BCP PROPERTY_BCP GEO_PROPERTY_BCP
+export SAMPLE_FILENAME KEYVALUE_FILENAME NOTE_FILENAME
 
 #  Complete path name of the log files
 LOG_FILE=${LOGDIR}/geo_htload.log
