@@ -1,3 +1,11 @@
+TAG: gxdhtload-6-0-23-7
+DATE: 04/17/2024
+STAFF: sc
+CHANGES: wts2-1339/fl2-823 - load expt objects for expts
+    with > 1000 samples, but don't load samples. Create a
+    ‘Exceeds maximum sample number.’ note unless a) expt
+     curation state is 'done' or expt already has the note
+
 TAG: gxdhtload-6-0-23-6
 DATE: 04/11/2024
 STAFF: sc
